# 5learn5

./: .gitignore  Cargo.toml  README.md  build.ps1  reCreate.ps1  setup.ps1  test.ps1
frontend/: index.html  index.js  style.css
res/: lamp.wasm
src/: lib.rs  tests.rs  utils.rs
z_del/: index.html  index.js  style.css
