[package]
name = "lamp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
# crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
chrono = "0.4.19"
#chrono = { version = "0.4.19", features = ["wasmbind"] }
colored = "*"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true



